--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"eslint-config-prettier": "^9.0.0",
 		"eslint-plugin-prettier": "^5.0.1",
 		"prettier": "^3.1.0",
+		"rollup": "^4.6.1",
 		"typescript": "^5.3.2"
 	}
 }
