--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "mini-reacts",
 	"main": "index.js",
 	"scripts": {
-		"lint": "eslint --ext .ts,.jsx,.tsx --fix --quiet ./packages"
+		"lint": "eslint --ext .ts,.jsx,.tsx --fix --quiet ./packages",
+		"build:dev": "rollup  --bundleConfigAsCjs --config scripts/rollup/react.config.js"
 	},
 	"keywords": [],
 	"author": "",
@@ -12,6 +13,7 @@
 	"devDependencies": {
 		"@commitlint/cli": "^18.4.3",
 		"@commitlint/config-conventional": "^18.4.3",
+		"@rollup/plugin-commonjs": "^25.0.7",
 		"@typescript-eslint/eslint-plugin": "^6.13.1",
 		"@typescript-eslint/parser": "^6.13.1",
 		"commitlint": "^18.4.3",
@@ -20,6 +22,7 @@
 		"eslint-plugin-prettier": "^5.0.1",
 		"prettier": "^3.1.0",
 		"rollup": "^4.6.1",
+		"rollup-plugin-typescript2": "^0.36.0",
 		"typescript": "^5.3.2"
 	}
 }
