--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"lint": "eslint --ext .ts,.jsx,.tsx --fix --quiet ./packages",
-		"build:dev": "rimraf dist && rollup  --bundleConfigAsCjs --config scripts/rollup/react.config.js"
+		"build:dev": "rm -rf dist && rollup  --bundleConfigAsCjs --config scripts/rollup/react.config.js"
 	},
 	"keywords": [],
 	"author": "",
@@ -23,6 +23,7 @@
 		"prettier": "^3.1.0",
 		"rimraf": "^5.0.5",
 		"rollup": "^4.6.1",
+		"rollup-plugin-generate-package-json": "^3.2.0",
 		"rollup-plugin-typescript2": "^0.36.0",
 		"typescript": "^5.3.2"
 	}
