--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@commitlint/cli": "^18.4.3",
 		"@commitlint/config-conventional": "^18.4.3",
 		"@rollup/plugin-commonjs": "^25.0.7",
+		"@rollup/plugin-replace": "^5.0.5",
 		"@typescript-eslint/eslint-plugin": "^6.13.1",
 		"@typescript-eslint/parser": "^6.13.1",
 		"commitlint": "^18.4.3",
