--- a/packages/react-dom/package.json
+++ b/packages/react-dom/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "module": "index.ts",
   "dependencies": {
-    "share":"workspace:*",
-    "react-reconcile": "workspace:*"
+    "shared":"workspace:*",
+    "react-reconciler": "workspace:*"
   },
   "peerDependencies": {
     "react": "workspace:*"
