--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -4,7 +4,7 @@
 	"description": "react 公用方法",
 	"module": "index.ts",
 	"dependencies": {
-		"share": "workspace:*"
+		"shared": "workspace:*"
 	},
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1"
