--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"main": "index.js",
 	"scripts": {
 		"lint": "eslint --ext .ts,.jsx,.tsx --fix --quiet ./packages",
-		"build:dev": "rm -rf dist && rollup  --bundleConfigAsCjs --config scripts/rollup/dev.config.js"
+		"build:dev": "rm -rf dist && rollup  --bundleConfigAsCjs --config scripts/rollup/dev.config.js",
+    "demo":"vite serve demos/test-fc --config scripts/vite/vite.config.js --force"
 	},
 	"keywords": [],
 	"author": "",
@@ -27,6 +28,12 @@
 		"rollup": "^4.6.1",
 		"rollup-plugin-generate-package-json": "^3.2.0",
 		"rollup-plugin-typescript2": "^0.36.0",
-		"typescript": "^5.3.2"
+		"typescript": "^5.3.2",
+    "@types/react": "^18.2.43",
+    "@types/react-dom": "^18.2.17",
+    "@vitejs/plugin-react": "^4.2.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "vite": "^5.0.8"
 	}
 }
