--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,10 +1,7 @@
 {
 	"name": "shared",
 	"version": "1.0.0",
-	"description": "公用方法",
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
+	"description": "所有公用辅助方法及类型定义",
 	"keywords": [],
 	"author": "",
 	"license": "ISC"
