--- a/package.json
+++ b/package.json
@@ -6,34 +6,41 @@
 	"scripts": {
 		"lint": "eslint --ext .ts,.jsx,.tsx --fix --quiet ./packages",
 		"build:dev": "rm -rf dist && rollup  --bundleConfigAsCjs --config scripts/rollup/dev.config.js",
-    "demo":"vite serve demos/test-fc --config scripts/vite/vite.config.js --force"
+		"demo": "vite serve demos/test-fc --config scripts/vite/vite.config.js --force",
+		"test": "jest --config scripts/jest/jest.config.js"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"@babel/core": "^7.23.7",
+		"@babel/plugin-transform-react-jsx": "^7.23.4",
+		"@babel/preset-env": "^7.23.8",
 		"@commitlint/cli": "^18.4.3",
 		"@commitlint/config-conventional": "^18.4.3",
 		"@rollup/plugin-alias": "^5.1.0",
 		"@rollup/plugin-commonjs": "^25.0.7",
 		"@rollup/plugin-replace": "^5.0.5",
+		"@types/react": "^18.2.43",
+		"@types/react-dom": "^18.2.17",
 		"@typescript-eslint/eslint-plugin": "^6.13.1",
 		"@typescript-eslint/parser": "^6.13.1",
+		"@vitejs/plugin-react": "^4.2.1",
 		"commitlint": "^18.4.3",
 		"eslint": "^8.55.0",
 		"eslint-config-prettier": "^9.0.0",
 		"eslint-plugin-prettier": "^5.0.1",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-react-refresh": "^0.4.5",
+		"jest": "^29.7.0",
+		"jest-config": "^29.7.0",
+		"jest-environment-jsdom": "^29.7.0",
 		"prettier": "^3.1.0",
 		"rimraf": "^5.0.5",
 		"rollup": "^4.6.1",
 		"rollup-plugin-generate-package-json": "^3.2.0",
 		"rollup-plugin-typescript2": "^0.36.0",
 		"typescript": "^5.3.2",
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
-    "@vitejs/plugin-react": "^4.2.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "vite": "^5.0.8"
+		"vite": "^5.0.8"
 	}
 }
